--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -48,8 +48,8 @@
     padding: 0.8rem;
     border: 1px solid #ccc;
     border-radius: 8px;
-    font-size: 1rem;
-    width: 100%;
+    font-size: 0.9rem;
+    width: 90%;
   }
   
   input:focus, select:focus {
@@ -65,7 +65,7 @@
   
   /* Caixa de seleção (checkbox) */
   input[type="checkbox"] {
-    margin-right: 0.5rem;
+    margin-right: 0.7rem;
   }
   
   /* Div principal */
@@ -90,7 +90,7 @@
   
     button {
       width: 100%;
-      font-size: 1rem;
+      font-size: 0.9rem;
       padding: 1rem;
     }
   
@@ -155,14 +155,14 @@
   
   /* 🔥 NOVO: Botão de lixeira no canto superior direito */
   .botao-lixeira {
-    position: absolute;
+    position: relative;
     top: 8px;
-    right: 8px;
+    right: 0px;
     background-color: transparent;
     border: none;
     color: #d11a2a;
     cursor: pointer;
-    padding: 0.3rem;
+    padding: 0.01rem;
   }
   
   .botao-lixeira:hover {
