--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -56,7 +56,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 0.9rem;
-    width: 95%;
+    width: 97%;
   }
   
   input:focus, select:focus {
@@ -216,5 +216,11 @@
   
   .send-whatsapp-button:hover {
     background-color: #128c7e;
+  }
+  @media (min-width: 768px) {
+    .logo-container {
+      justify-content: flex-end !important;
+      padding-right: 1rem;
+    }
   }
   
