--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,102 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* src/styles/global.css */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #d4d4d4; /* Cinza */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #022c15; /* Verde Escuro */
+}
+
+.container {
+  padding: 20px;
+  background-color: #f1f1f1; /* Branco */
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  color: #0c6a37; /* Verde Claro */
+  text-align: center;
+}
+
+label {
+  font-size: 1rem;
+  color: #022c15; /* Verde Escuro */
+}
+
+input, select {
+  padding: 10px;
+  border: 2px solid #0c6a37; /* Verde Claro */
+  border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+}
+
+input:focus, select:focus {
+  outline: none;
+  border-color: #febf58; /* Laranja Amarelado */
+}
+
+button.add-button {
+  background-color: #febf58; /* Laranja Amarelado */
+  color: white;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button.add-button:hover {
+  background-color: #0c6a37; /* Verde Claro */
+}
+
+.colaborador-container {
+  background-color: #ffffff; /* Branco */
+  border: 1px solid #d4d4d4; /* Cinza */
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  border-radius: 8px;
+}
+
+.num-colaborador {
+  font-size: 1.2rem;
+  color: #022c15; /* Verde Escuro */
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.item {
+  margin-bottom: 1rem;
+}
+
+.item label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.item input, .item select {
+  background-color: #f9f9f9; /* Cor de fundo suave para os campos */
+  border: 1px solid #d4d4d4; /* Cinza */
+}
+
+.item input:focus, .item select:focus {
+  border-color: #0c6a37; /* Verde Claro */
+}
+
+.divider {
+  margin: 2rem 0;
+  border-top: 1px solid #d4d4d4; /* Cinza */
+}
+
+input[type="checkbox"] {
+  accent-color: #febf58; /* Laranja Amarelado */
+}
+
+input[type="checkbox"]:focus {
+  outline: none;
 }
